# Linghun

./: .cbmignore  .env.example  .gitattributes  .gitignore  AGENTS.md  APP_BRIDGE_MANIFEST.schema.json  CCB_FULL_LINE_AUDIT.md  CCB_STRUCTURE_SCAN.md  CHANGES.md  CHANGES_SUMMARY.md  CLAUDE.md  CODE_AUDIT_2026-06-07.md  COMMAND_SURFACE_FIX_PLAN_ZH.md  COMPACT-UPGRADE-PLAN.md  COMPACTION_ROADMAP_ZH.md  D13E_TUI_PERMISSION_AUDIT.md  D13Q_UX_REPORT_2026-05-28.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  LINGHUN.md  LINGHUN_CLOSURE_PHASED_TASKS.md  LINGHUN_DEVELOPMENT_ROADMAP.md  LINGHUN_FINAL_ARCHITECTURE_AND_ROADMAP.md  LINGHUN_IMPLEMENTATION_SPEC.md  LINGHUN_PHASED_DELIVERY_BLUEPRINT.md  LINGHUN_PHASE_00_18_DESIGN_RUNTIME_OVERDESIGN_FULL_AUDIT.md  PHASE5_CHANGES.md  PHASE5_SUMMARY.md  PHASE6_FIX_SUMMARY.md  PHASE9_CHANGES_SUMMARY.md  PHASE_00_18_DESIGN_RUNTIME_OVERDESIGN_FULL_AUDIT.md  PHASE_04_TARGETED_REVIEW_FIX_REPORT.md  PHASE_15_BETA_CCB_MATURITY_REMEDIATION_BASELINE.md  PHASE_2_4_FOLLOWUP.md  PRE-ENGINE-ROADMAP.md  PRE_ENGINE_DAEMON_DEFERRED_ISSUE.md  README.en.md  README.md  RENDERER_RUNTIME_MIGRATION_PLAN.md  REPOSITORY_AUDIT.md  (+20 more)
prototypes/pre-engine/: Cargo.toml  PRE-ENGINE-ROADMAP.md  bench-go-product-1k.cjs  bench-java-product-1k.cjs  bench-rust-product-1k.cjs  bench-structural-1k.cjs  dart-deep-layer.cjs  go-deep-layer.cjs  java-deep-layer.cjs  kotlin-deep-layer.cjs  php-deep-layer.cjs  py-deep-layer.cjs  rust-deep-layer.cjs  smoke-a.cjs  smoke-b.cjs  smoke-cpp.cjs  smoke-csharp.cjs  smoke-dart.cjs  smoke-go.cjs  smoke-java-android.cjs  smoke-java.cjs  smoke-php.cjs  (+10 more)
(+479 files in other folders)
