[package]
name = "linghun-pre-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linghun-pre-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
walkdir = "2"
